--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,13 @@ edition = "2021"
 # image = "0.25.1"
 # windows = "0.58.0"
 windows-capture = "1.2.0"
- #windows-sys = "0.52.0"
- winapi = {version = "0.3", features = ["winuser", "winnls"]}
+# windows-sys = "0.52.0"
+winapi = {version = "0.3", features = ["winuser", "winnls", "wincon", "winbase"]}
 # libc = "0.2.155"
-termcolor = "1.4.1"
-term_size = "0.3.2"
-crossterm = "0.27.0"
-tui = "0.19.0"
+# termcolor = "1.4.1"
+# term_size = "0.3.2"
+ crossterm = "0.27.0"
+# tui = "0.19.0"
 # fontdue = "0.9.2"
 # glyphon = "0.5.0"
 # wgpu = "0.19"
@@ -27,6 +27,11 @@ tui = "0.19.0"
 # lru = "0.12.1"
 rand = "0.8.5"
 kernel32-sys = "0.2.2"
+terminal_size = "0.3.0"
+rayon = "1.10.0"
+criterion = "0.5.1"
+# termion = "4.0.2"
+# termsize = "0.1.9"
 
 
 [dependencies.windows]
@@ -37,3 +42,6 @@ features = [
     "Win32_System_Threading",
     "Win32_System_Diagnostics_ToolHelp",
 ]
+
+[profile.dev]
+debuginfo-level = 1 
